force-app/main/default/objects/Invoice_Line_Item__c/Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <label>IO Invoice Line Item</label>
    <nameField>
        <displayFormat>INVL-{000}</displayFormat>
        <label>Invoice Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IO Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>