force-app/main/default/objects/Invoice_Line_Item__c/fields/Ad_Sizes__c.field-meta.xml
<CustomField>
    <fullName>Ad_Sizes__c</fullName>
    <label>Ad Sizes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>