force-app/main/default/objects/Invoice_Line_Item__c/fields/Impression__c.field-meta.xml
<CustomField>
    <fullName>Impression__c</fullName>
    <formula>( Sales_Price__c  /  CPM__c )*1000</formula>
    <label>Impression</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>