force-app/main/default/objects/Invoice_Line_Item__c/fields/IO__c.field-meta.xml
<CustomField>
    <fullName>IO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IO</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>IO Invoice Line Items</relationshipLabel>
    <relationshipName>IO_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>