force-app/main/default/objects/Invoice_Line_Item__c/fields/Iterable_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Iterable_Campaign_Id__c</fullName>
    <label>Iterable Campaign Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>