force-app/main/default/objects/Invoice_Line_Item__c/fields/Monthly_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Frequency__c</fullName>
    <label>Monthly Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>