force-app/main/default/objects/Invoice_Line_Item__c/fields/Total_Impressions__c.field-meta.xml
<CustomField>
    <fullName>Total_Impressions__c</fullName>
    <formula>Monthly_Impressions__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Impressions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>